tests/nullable/nullable.exp
Error ------------------------------------------------------------- error.js:8:8

Cannot cast `any` to number because null or undefined [1] is incompatible with
number [2].


Error ------------------------------------------------------------- error.js:9:3

Cannot cast `any` to null because:
 - null or undefined [1] is incompatible with null [2].
 - number [3] is incompatible with null [2].


Error ------------------------------------------------------------ error.js:10:3

Cannot cast `any` to undefined because:
 - null or undefined [1] is incompatible with undefined [2].
 - number [3] is incompatible with undefined [2].


Error: error.js:16
 16: ((any: ?number): number | null);
            ^^^^^^^ null or undefined. This type is incompatible with
 16: ((any: ?number): number | null);
                      ^^^^^^^^^^^^^ union: number | null
  Member 1:
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Member 2:
   16: ((any: ?number): number | null);
                                 ^^^^ null
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                                 ^^^^ null

Error: error.js:17
 17: ((any: ?number): number | void);
            ^^^^^^^ null or undefined. This type is incompatible with
 17: ((any: ?number): number | void);
                      ^^^^^^^^^^^^^ union: number | undefined
  Member 1:
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Member 2:
   17: ((any: ?number): number | void);
                                 ^^^^ undefined
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                                 ^^^^ undefined

Error ------------------------------------------------------------ maybe.js:5:11

Cannot cast `123` to nullable string because number [1] is incompatible with
string [2].


Error --------------------------------------------------------- nullable.js:1:32

Cannot return `null` because null [1] is incompatible with string [2].


Error -------------------------------------------------------- nullable.js:11:22

Cannot call `corge` with `x` bound to `x` because string [1] is incompatible
with number [2].


Error -------------------------------------------------------- nullable.js:15:17

Cannot call `qux` with `x` bound to `x` because:
 - null [1] is incompatible with string [2].
 - null or undefined [3] is incompatible with string [2].


Error --------------------------------------------------- simple_nullable.js:4:5

Cannot call `bar` with `'hmm'` bound to `x` because string [1] is incompatible
with number [2].



Found 13 errors
